--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- Band Name and Logo -->
         <div class="text-center">
             <h1 class="band-name text-F5EFE6 mb-4 sm:text-6xl md:text-7xl text-5xl">JIMMY FITZSIMMONS</h1>
-            <img src="https://placehold.co/800x500/B22222/F5EFE6?text=JIMMY%0AFITZSIMMONS"
+            <img src="https://i.imgur.com/CWY92Ht.jpeg"
                  onerror="this.onerror=null;this.src='https://placehold.co/800x500/B22222/F5EFE6?text=BAND%20LOGO';"
                  alt="Jimmy Fitzsimmons Band Logo"
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
@@ -202,16 +202,6 @@
                     Bandcamp
                 </a>
             </div>
-        </section>
-
-        <!-- Booking & Inquiries Section -->
-        <section class="text-center">
-            <h2 class="text-3xl">FOR BOOKING & INQUIRIES</h2>
-            <p class="mt-4 text-lg text-F5EFE6">
-                Email: <a href="mailto:info@jimmyfitzsimmons.com" class="text-B22222 hover:underline">info@jimmyfitzsimmons.com</a><br>
-                Phone: <a href="tel:+1234567890" class="text-B22222 hover:underline">+1 (234) 567-890</a>
-                <span class="block text-sm text-gray-400 mt-2">(Please replace with actual contact info)</span>
-            </p>
         </section>
 
     </div>
