--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- Main content box now uses a darker gray to stand out against the red body background -->
         <!-- Band Name and Logo -->
         <div class="text-center">
-            <h1 class="band-name text-F5EFE6 mb-4 sm:text-6xl md:text-7xl text-5xl">JIMMY FITZSIMMONS</h1>
+            <h1 class="band-name mb-4 sm:text-6xl md:text-7xl text-5xl">JIMMY FITZSIMMONS</h1>
             <img src="https://i.imgur.com/CWY92Ht.jpeg"
                  onerror="this.onerror=null;this.src='https://placehold.co/800x500/B22222/F5EFE6?text=BAND%20LOGO';"
                  alt="Jimmy Fitzsimmons Band Logo"
