--- a/index.html
+++ b/index.html
@@ -129,10 +129,16 @@
         <!-- Band Name and Logo -->
         <div class="text-center">
             <h1 class="band-name mb-4 text-4xl sm:text-6xl md:text-7xl">JIMMY FITZSIMMONS</h1>
-            <img src="https://i.imgur.com/CWY92Ht.jpeg"
+            <img src="https://placehold.co/800x500/B22222/F5EFE6?text=JIMMY%0AFITZSIMMONS"
                  onerror="this.onerror=null;this.src='https://placehold.co/800x500/B22222/F5EFE6?text=BAND%20LOGO';"
                  alt="Jimmy Fitzsimmons Band Logo"
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
+            <!-- Download Button -->
+            <div class="text-center mt-6">
+                <a href="https://placehold.co/800x500/B22222/F5EFE6?text=JIMMY%0AFITZSIMMONS" download="jimmy-fitzsimmons-logo.png" class="btn-primary">
+                    Download Band Logo
+                </a>
+            </div>
         </div>
 
         <!-- About The Band Section -->
@@ -179,7 +185,7 @@
                     <p class="quote-source">— Balkanrock</p>
                 </div>
                 <div class="quote-box">
-                    <p>"Jimmy Fitzsimmons osnovani su 2024. godine s jasnom misijom – stvoriti glazbu koja pokreće, zabavlja, ali i provocira. Njihov izričaj odlikuje autentičnost, distanca od komercijalne formule i stav “sve ili ništa”."</p>
+                    <p>"Jimmy Fitzsimmons were founded in 2024 with a clear mission – to create music that moves, entertains, but also provokes. Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude."</p>
                     <p class="quote-source">— Poprock</p>
                 </div>
                 <div class="quote-box">
@@ -205,6 +211,34 @@
             </div>
         </section>
 
+        <!-- QR Codes Section -->
+        <section class="text-center">
+            <h2 class="text-3xl">SCAN FOR MORE MUSIC</h2>
+            <div class="flex flex-col sm:flex-row justify-center items-center space-y-8 sm:space-y-0 sm:space-x-12 mt-6">
+                <div class="flex flex-col items-center">
+                    <img src="https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=https://open.spotify.com/album/0DEOnuWAVIGwo9Lo3zkmYm"
+                         alt="Spotify QR Code" class="w-40 h-40 border-2 border-F5EFE6 rounded-lg shadow-lg">
+                    <p class="mt-2 text-lg font-bold text-F5EFE6">Spotify Album</p>
+                    <a href="https://open.spotify.com/album/0DEOnuWAVIGwo9Lo3zkmYm" target="_blank" class="text-B22222 hover:underline text-sm">Open on Spotify</a>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=https://www.youtube.com/watch?v=L0zE21Qf2wI&list=OLAK5uy_kNZeBrbwmo8kwWsgBmVz6-VAiQC2pSays"
+                         alt="YouTube QR Code" class="w-40 h-40 border-2 border-F5EFE6 rounded-lg shadow-lg">
+                    <p class="mt-2 text-lg font-bold text-F5EFE6">YouTube Playlist</p>
+                    <a href="https://www.youtube.com/watch?v=L0zE21Qf2wI&list=OLAK5uy_kNZeBrbwmo8kwWsgBmVz6-VAiQC2pSays" target="_blank" class="text-B22222 hover:underline text-sm">Open on YouTube</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Booking & Inquiries Section -->
+        <section class="text-center">
+            <h2 class="text-3xl">FOR BOOKING & INQUIRIES</h2>
+            <p class="mt-4 text-lg text-F5EFE6">
+                Email: <a href="mailto:info@jimmyfitzsimmons.com" class="text-B22222 hover:underline">info@jimmyfitzsimmons.com</a><br>
+                Phone: <a href="tel:+1234567890" class="text-B22222 hover:underline">+1 (234) 567-890</a>
+                <span class="block text-sm text-gray-400 mt-2">(Please replace with actual contact info)</span>
+            </p>
+        </section>
 
     </div>
 </body>
