--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
             <!-- Download Button -->
             <div class="text-center mt-6">
-                <a href="https://placehold.co/800x500/B22222/F5EFE6?text=JIMMY%0AFITZSIMMONS" download="jimmy-fitzsimmons-logo.png" class="btn-primary">
+                <a href="https://drive.google.com/file/d/1bGmijs4YD9d8ovOAVLzJM_V18kbCvx2s/view" download="jimmy-fitzsimmons-logo.png" class="btn-primary">
                     Download Band Logo
                 </a>
             </div>
