--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <!-- Download Button -->
             <div class="text-center mt-6">
                 <a href="https://drive.google.com/file/d/1bGmijs4YD9d8ovOAVLzJM_V18kbCvx2s/view" download="jimmy-fitzsimmons-logo.png" class="btn-primary">
-                    Download Band Logo
+                    Download Band Photos
                 </a>
             </div>
         </div>
@@ -234,9 +234,8 @@
         <section class="text-center">
             <h2 class="text-3xl">FOR BOOKING & INQUIRIES</h2>
             <p class="mt-4 text-lg text-F5EFE6">
-                Email: <a href="mailto:info@jimmyfitzsimmons.com" class="text-B22222 hover:underline">info@jimmyfitzsimmons.com</a><br>
-                Phone: <a href="tel:+1234567890" class="text-B22222 hover:underline">+1 (234) 567-890</a>
-                <span class="block text-sm text-gray-400 mt-2">(Please replace with actual contact info)</span>
+                Email: <a href="jimmyfitzsimmons@gmail.com" class="text-B22222 hover:underline">jimmyfitzsimmons@gmail.com</a><br>
+                Phone: <a href="tel:+381616339507" class="text-B22222 hover:underline">+381616339507</a>
             </p>
         </section>
 
