--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
             <h2 class="text-3xl">SCAN FOR MORE MUSIC</h2>
             <div class="flex flex-col sm:flex-row justify-center items-center space-y-8 sm:space-y-0 sm:space-x-12 mt-6">
                 <div class="flex flex-col items-center">
-                    <img src="https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=https://open.spotify.com/album/0DEOnuWAVIGwo9Lo3zkmYm"
+                    <img src="https://i.imgur.com/NbuPLco.png"
                          alt="Spotify QR Code" class="w-40 h-40 border-2 border-F5EFE6 rounded-lg shadow-lg">
                     <p class="mt-2 text-lg font-bold text-F5EFE6">Spotify Album</p>
                     <a href="https://open.spotify.com/album/0DEOnuWAVIGwo9Lo3zkmYm" target="_blank" class="text-B22222 hover:underline text-sm">Open on Spotify</a>
                 </div>
                 <div class="flex flex-col items-center">
-                    <img src="https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=https://www.youtube.com/watch?v=L0zE21Qf2wI&list=OLAK5uy_kNZeBrbwmo8kwWsgBmVz6-VAiQC2pSays"
+                    <img src="https://i.imgur.com/phdHiFN.png"
                          alt="YouTube QR Code" class="w-40 h-40 border-2 border-F5EFE6 rounded-lg shadow-lg">
                     <p class="mt-2 text-lg font-bold text-F5EFE6">YouTube Playlist</p>
                     <a href="https://www.youtube.com/watch?v=L0zE21Qf2wI&list=OLAK5uy_kNZeBrbwmo8kwWsgBmVz6-VAiQC2pSays" target="_blank" class="text-B22222 hover:underline text-sm">Open on YouTube</a>
