--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <!-- Band Name and Logo -->
         <div class="text-center">
             <h1 class="band-name mb-4 text-4xl sm:text-6xl md:text-7xl">JIMMY FITZSIMMONS</h1>
-            <img src="https://placehold.co/800x500/B22222/F5EFE6?text=JIMMY%0AFITZSIMMONS"
+            <img src="https://i.imgur.com/CWY92Ht.jpeg"
                  onerror="this.onerror=null;this.src='https://placehold.co/800x500/B22222/F5EFE6?text=BAND%20LOGO';"
                  alt="Jimmy Fitzsimmons Band Logo"
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
