--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <h2 class="text-3xl">SCAN FOR MORE MUSIC</h2>
             <div class="flex flex-col sm:flex-row justify-center items-center space-y-8 sm:space-y-0 sm:space-x-12 mt-6">
                 <div class="flex flex-col items-center">
-                    <img src="https://i.imgur.com/NbuPLco.png"
+                    <img src="https://i.imgur.com/CP9CtTi.png"
                          alt="Spotify QR Code" class="w-40 h-40 border-2 border-F5EFE6 rounded-lg shadow-lg">
                     <p class="mt-2 text-lg font-bold text-F5EFE6">Spotify Album</p>
                     <a href="https://open.spotify.com/album/0DEOnuWAVIGwo9Lo3zkmYm" target="_blank" class="text-B22222 hover:underline text-sm">Open on Spotify</a>
