--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <!-- Download Button -->
             <div class="text-center mt-6">
                 <a href="https://drive.google.com/file/d/1bGmijs4YD9d8ovOAVLzJM_V18kbCvx2s/view" download="jimmy-fitzsimmons-logo.png" class="btn-primary">
-                    Download Band Photos
+                    Download Photos & Logo
                 </a>
             </div>
         </div>
