--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <section class="text-center">
             <h2 class="text-3xl" data-translate-key="booking_inquiries_heading">FOR BOOKING & INQUIRIES</h2>
             <p class="mt-4 text-lg text-F5EFE6">
-                <span data-translate-key="email_label">Email</span>: <a href="jimmyfitzsimmons@gmail.com" class="text-B22222 hover:underline">jimmyfitzsimmons@gmail.com</a><br>
+                <span data-translate-key="email_label">Email</span>: <a href="jimmyfitzsimmonsmusic@gmail.com" class="text-B22222 hover:underline">jimmyfitzsimmonsmusic@gmail.com</a><br>
                 <span data-translate-key="phone_label">Phone</span>: <a href="tel:+381616339507" class="text-B22222 hover:underline">+381616339507</a>
             </p>
         </section>
