--- a/index.html
+++ b/index.html
@@ -225,22 +225,6 @@
             </div>
         </section>
 
-        <!-- Connect Section -->
-        <section class="text-center">
-            <h2 class="text-3xl" data-translate-key="connect_heading">CONNECT WITH JIMMY FITZSIMMONS</h2>
-            <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-6 mt-6">
-                <a href="https://www.facebook.com/jimmyfitzsimmonsband/" target="_blank" class="btn-primary">
-                    Facebook
-                </a>
-                <a href="https://www.instagram.com/jimmyfitzband" target="_blank" class="btn-primary">
-                    Instagram
-                </a>
-                <a href="https://jimmyfitzsimmons.bandcamp.com" target="_blank" class="btn-primary">
-                    Bandcamp
-                </a>
-            </div>
-        </section>
-
         <!-- QR Codes Section -->
         <section class="text-center">
             <h2 class="text-3xl" data-translate-key="scan_music_heading">SCAN FOR MORE MUSIC</h2>
@@ -257,6 +241,25 @@
                     <p class="mt-2 text-lg font-bold text-F5EFE6" data-translate-key="youtube_label">YouTube Playlist</p>
                     <a href="https://www.youtube.com/watch?v=L0zE21Qf2wI&list=OLAK5uy_kNZeBrbwmo8kwWsgBmVz6-VAiQC2pSays" target="_blank" class="text-B22222 hover:underline text-sm" data-translate-key="open_youtube">Open on YouTube</a>
                 </div>
+            </div>
+        </section>
+        
+        <!-- Connect Section -->
+        <section class="text-center">
+            <h2 class="text-3xl" data-translate-key="connect_heading">CONNECT WITH JIMMY FITZSIMMONS</h2>
+            <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-6 mt-6">
+                <a href="https://www.facebook.com/jimmyfitzsimmonsband/" target="_blank" class="btn-primary">
+                    <i class="fab fa-facebook"></i> Facebook
+                </a>
+                <a href="https://www.instagram.com/jimmyfitzband" target="_blank" class="btn-primary">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://jimmyfitzsimmons.bandcamp.com" target="_blank" class="btn-primary">
+                    <i class="fab fa-bandcamp"></i> Bandcamp
+                </a>
+                <a href="https://www.youtube.com/@Jimmy_Fitz" target="_blank" class="btn-primary">
+                    <i class="fab fa-youtube"></i> YouTube
+                </a>
             </div>
         </section>
 
