--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jimmy Fitzsimmons - Official One-Sheet</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Custom font import - Inter for general text, Roboto Black for band name */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Roboto:wght@900&display=swap');
