--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <div class="max-w-4xl w-full space-y-12 bg-gray-900 p-8 sm:p-10 rounded-lg shadow-2xl border border-gray-700">
         <!-- Main content box now uses a darker gray to stand out against the red body background -->
-        <img src="https://i.imgur.com/Bzbulbr.png" alt="Jimmy Fitz Logo" class="logo-img">
+        <img src="https://i.imgur.com/16O2W4n.png" alt="Jimmy Fitz Logo" class="logo-img">
         <!-- Band Name and Logo -->
         <div class="text-center">
             <img src="https://i.imgur.com/CWY92Ht.jpeg"
